# MetalLora

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TECHNICAL.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  benchmark_lora.py
examples/: __init__.py  basic_usage.py  train_example.py
kernels/: gemm_lowrank.metal  lora_advanced.metal  lora_backward.metal  lora_common.metal  lora_extreme.metal  lora_forward.metal  lora_kernels.metal  lora_quantized.metal  lora_train.metal
python/metal_lora/: __init__.py  advanced_ops.py  exceptions.py  extreme_ops.py  kernels.py  layers.py  logging.py  ops.py  optimizations.py  trainer.py  utils.py
tests/: test_kernels.py  test_parity.py
