[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metal-lora"
version = "0.1.0"
description = "Heavily optimized LoRA kernels for MLX on Apple Silicon"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MetalLoRA Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/MetalLora"
Repository = "https://github.com/yourusername/MetalLora"
Issues = "https://github.com/yourusername/MetalLora/issues"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
metal_lora = ["kernels/*.metal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
